Error al modificar experiencia corregido