@@ -24,55 +24,61 @@ import org.springframework.web.bind.annotation.RequestMapping;
 @CrossOrigin(origins= "http://localhost:4200")
 public class CExperiencia {
     @Autowired
-    SExperiencia experiencia;
+    SExperiencia sExperiencia;
     
     @GetMapping("/lista")
     public ResponseEntity<List<Experiencia>> list(){
-        List<Experiencia> list= experiencia.list();
-        return new ResponseEntity(list,HttpStatus.OK);
+        List<Experiencia> list = sExperiencia.list();
+        return new ResponseEntity(list, HttpStatus.OK);
     }
     
     @PostMapping("/create")
     public ResponseEntity<?> create(@RequestBody DTOExperiencia dtoexp){      
         if(StringUtils.isBlank(dtoexp.getNombreE()))
             return new ResponseEntity(new Mensaje("El nombre es obligatorio"), HttpStatus.BAD_REQUEST);
-        if(experiencia.existsByNombre(dtoexp.getNombreE()))
+        if(sExperiencia.existsByNombreE(dtoexp.getNombreE()))
             return new ResponseEntity(new Mensaje("Esa experiencia existe"), HttpStatus.BAD_REQUEST);
         
-        Experiencia exp = new Experiencia(dtoexp.getNombreE(), dtoexp.getDescripcionE());
-        experiencia.save(exp);
+        Experiencia experiencia = new Experiencia(dtoexp.getNombreE(), dtoexp.getDescripcionE());
+        sExperiencia.save(experiencia);
         
         return new ResponseEntity(new Mensaje("Experiencia agregada"), HttpStatus.OK);
     }
+    
     @PutMapping("/update/{id}")
     public ResponseEntity<?> update(@PathVariable("id") int id, @RequestBody DTOExperiencia dtoexp){
-        //validacion si existe ID
-        if (!experiencia.existsById(id))
+        //Validamos si existe el ID
+        if(!sExperiencia.existsById(id))
             return new ResponseEntity(new Mensaje("El ID no existe"), HttpStatus.BAD_REQUEST);
-        // si ya existe sa experiencia 
-        if (experiencia.existsByNombre(dtoexp.getNombreE()) && experiencia.getByNombreE(dtoexp.getNombreE()).get().getId() != id)
+        //Compara nombre de experiencias
+        if(sExperiencia.existsByNombreE(dtoexp.getNombreE()) && sExperiencia.getByNombreE(dtoexp.getNombreE()).get().getId() != id)
             return new ResponseEntity(new Mensaje("Esa experiencia ya existe"), HttpStatus.BAD_REQUEST);
-        
-        //en caso que reciba en blanco
-        if (dtoexp.getNombreE().isBlank())
+        //No puede estar vacio
+        if(StringUtils.isBlank(dtoexp.getNombreE()))
             return new ResponseEntity(new Mensaje("El nombre es obligatorio"), HttpStatus.BAD_REQUEST);
         
-        Experiencia exp= experiencia.getOne(id).get();
-        exp.setNombreE(dtoexp.getNombreE());
-        exp.setDescripcionE(dtoexp.getDescripcionE());
+        Experiencia experiencia = sExperiencia.getOne(id).get();
+        experiencia.setNombreE(dtoexp.getNombreE());
+        experiencia.setDescripcionE((dtoexp.getDescripcionE()));
         
-        experiencia.save(exp);
-        return new ResponseEntity(new Mensaje("Experiencia actualizada"), HttpStatus.OK);      
-        
+        sExperiencia.save(experiencia);
+        return new ResponseEntity(new Mensaje("Experiencia actualizada"), HttpStatus.OK);
+             
     }
     
     public ResponseEntity<?> delete(@PathVariable ("id")int id){
-        if (!experiencia.existsById(id))
+        if (!sExperiencia.existsById(id))
             return new ResponseEntity(new Mensaje("El ID no existe"), HttpStatus.BAD_REQUEST);
         
-        experiencia.delete(id);
+        sExperiencia.delete(id);
         return new ResponseEntity(new Mensaje("Experiencia eliminada"), HttpStatus.OK);
     }
-    
+    @GetMapping("/detail/{id}")
+    public ResponseEntity<Experiencia> getById(@PathVariable("id") int id){
+        if(!sExperiencia.existsById(id))
+            return new ResponseEntity(new Mensaje("no existe"), HttpStatus.NOT_FOUND);
+        Experiencia experiencia = sExperiencia.getOne(id).get();
+        return new ResponseEntity(experiencia, HttpStatus.OK);
+    }
     
 }
